--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,26 @@
 
-.row {
-    margin-top: 2.5em;
+.hide {
+    visibility: none;
 }
 
-.header {
+.upload {
+    position: relative;
+    border-radius: 1em;
     width: 100%;
-    height: 3em;
-    background-color: black;
+    background-color: #333;
+}
+
+.upload:hover {
+    -webkit-box-shadow: 0 10px 6px -6px #777;
+    -moz-box-shadow: 0 10px 6px -6px #777;
+    box-shadow: 0 10px 6px -6px #777;
+}
+
+.upload span {
+    display: block;
+    margin: 0 auto;
+    
+    font-size: 4em;
+    color: white;
+    text-align: center;
 }
