--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,7 @@
     border-radius: 1em;
     width: 100%;
     background-color: #333;
+    margin-bottom: 1em;
 }
 
 .upload:hover {
@@ -23,4 +24,8 @@
     font-size: 4em;
     color: white;
     text-align: center;
+}
+
+div.download {
+    font-size: 3em;
 }
