the clean logic is now a package

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
                     {% if ready %}
                     <div class="download">
                         <span class="glyphicon glyphicon-file"></span>
-                        <a class="download" href="./your_pdf_is_ready"> Your file is ready </a>
+                        <a class="download" href="./your_pdf_is_ready" target="_blank"> Your file is ready </a>
                     </div>
                     {% endif %}
                     {% with messages = get_flashed_messages() %}
