minor changes in the presentation

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
                         <input name="file" id="file-1a" type="file" multiple=true class="file hide" data-preview-file-type="any" data-overwrite-initial="false">
                     </div>
                     <div class="upload btn btn-danger">
-                        <span> Click here to clean your file! </span>
+                        <span> Clean your file! </span>
                     </div>
                     {% if ready %}
                     <div class="download">
