--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
                 <p> We don't store anything about you, neither your files nor your metadata.</p>
             </div>
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <a href="https://github.com/Margaruga/NQysit_Metadata" class="btn btn-lg btn-outline" target="_blank">
+                <a href="https://github.com/NQysit/matadata" class="btn btn-lg btn-outline" target="_blank">
                     <i class="fa fa-download"></i> GitHub
                 </a>
             </div>
